# Yoth

./: .clang-format  CMakeLists.txt  README.md
cmake/: libraries.cmake
test/: test.cpp
tests/: CMakeLists.txt  matrix_tests.cpp  swizzle_tests.cpp  test.cpp  tests_common.h  vector_2_tests.cpp  vector_3_tests.cpp  vector_4_tests.cpp  vector_mathematics_tests.cpp  vector_operations_tests.cpp
yoth/: matrix.h  matrix.ipp  point.h  quaternion.h  vector.h  vector.ipp  vector_type.h  vector_type.ipp  vector_type_concepts.h  yoth.h
yoth/common/: yoth.cpp  yoth.h
yoth/core/: concepts.h  config.hpp.in  core.cpp  core.h  macros.h
yoth/geometry/: bounding_box.cpp  bounding_box.h  bounding_box.ipp  ray.h  shapes.cpp  shapes.h  transform.cpp  transform.h  transform.ipp
yoth/mathematics/: constants.h  mathematics.h  matrix.h  matrix.ipp  normal.h  point.h  quaternion.h  transform.h  vector.h  vector.ipp  vector_type.h  vector_type.ipp
